Update BE to register also with name and on login to return name. In FE display name inline with profile icon